--- a/style.css
+++ b/style.css
@@ -1,72 +1,176 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-.container{
-    background-color: #a4a4dfd6;
-    min-height: 100vh;
-    border:10px solid #1d1e4c;
+html,body{
+    font-family: 'Roboto', sans-serif;
 }
-.content{
-    max-width: 900px;
-    margin: 0 auto;
+.img-container{
+    background-image: url(/tumblr_37173f32645715fc0e93fe04f709961b_82651825_1280.jpg);
+    width: 99%;
+    height: 100vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    margin: 15px;
 }
-.top_section{
-    margin-top: 100px;
+.nav{
     display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
 }
-.top_section h1{
-    font-size: 50px;
-    font-weight: bold;
-    color: #1d1e4c;
+.logo{
+    position: relative;
+    margin: 20px;
+    font-size: 35px;
     text-transform: uppercase;
+    color: dark black;
+    font-weight: 800;
 }
-.top_section h4{
-    text-align: end;
+.menu{
+    width: 100%;
+    margin-right: 70px;
+    display: flex;
+    gap: 100px;
+    justify-content: end;
+    align-items: center;
     font-size: 30px;
+    text-transform: uppercase;
+    color: #4c4747;
 }
-.image_container{
-    border-radius: 50%;
-    overflow: hidden;
+#sub{
+    border: 3px solid #4c4747;
+    padding: 5px 10px;
 }
-.image_container,img{
-    width: 300px;
-    height: 320px;
+.text{
+    position: relative;
+    text-align: center;
+    top: 30%;
+    text-transform: uppercase;
+    letter-spacing: 20px;
+    color: #4c4747;
 }
-.about_section{
-    margin-top: 50px;
+.p1{
+    font-size: 150px;
+    font-weight: 300;
 }
-.about_section h2{
-    font-size: 70px;
+
+#article{
+    background-color: antiquewhite;
+    padding: 100px 0;
+}
+#article h1{
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 10px;
+    word-spacing: 10px;
+    font-size: 40px;
     font-weight: 400;
-    text-transform: capitalize;
-    margin-bottom: 20px;
 }
-.about_section p{
-    font-size: 20px;
+.img, img{
+    width: 100%;
+    height: 260px;
+    border: none;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.content-1,.content-2,.content-3{
+    border: none;
+    box-shadow: 2px 2px 5px #726767;
+    border-radius: 5px;
+    overflow: hidden;
+    width: 300px;
+    height: 400px;
+    background: #fff;
+}
+.text-1,.text-2,.text-3{
+    padding: 38px;
+    text-align: center;
     line-height: 30px;
-    letter-spacing: 1.2px;
-    text-align: justify;
-}
-.biography_section{
-    margin: 50px 0;
-}
-.biography_section h3{
-    margin-bottom: 20px;
+    letter-spacing: 2px;
     text-transform: capitalize;
+    word-spacing: 5px;
 }
-.biography_section ul{
-    margin-left: 50px;
+.article-content{
+    display: flex;
+    justify-content: space-evenly;
+    margin: 50px;
 }
-.biography_section li{
-    margin-bottom: 15px;
+
+/* about */
+
+#about{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
 }
-.footer{
-    margin: 50px 0;
+.about-img{
+    width: 50%;
 }
-footer p{
-    text-align: end;
+.about-img img{
+    width: 100%;
+    height: 500px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.about-text{
+    width: 50%;
+}
+.about-text h1{
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    font-size: 40px;
+    font-weight: 400;
+    margin-bottom: 30px;
+}
+.about-text p{
+    text-align: justify;
+    margin: 0 80px;
+    letter-spacing: 2px;
+    word-spacing: 6px;
+    line-height: 40px;
+    font-size: 20px;
+}
+/* subscribe */
+#subscribe{
+    background-color:#c4d3c0e3;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 100px 0;
+}
+#subscribe h2{
+    text-transform: uppercase;
+    margin-bottom: 20px;
+    letter-spacing: 6px;
+    font-size: 40px;
+    font-weight: 400;
+}
+#subscribe h3{
+    text-transform: capitalize;
+    margin-bottom: 40px;
+    letter-spacing: 6px;
+    font-size: 20px;
+    font-weight: 400;
+}
+#subscribe input{
+    text-align: center;
+    margin-bottom: 40px;
+    padding: 50px;
+    font-size: 32px;
+    width: 800px;
+    height: 100px;
+    background-color:#b5beb2c4;
+    border: none;
+    letter-spacing: 10px;
+}
+#subscribe button{
+    padding: 20px 40px;
+    font-size: 30px;
+    letter-spacing: 15px;
 }
